# adventofcode

./: .editorconfig  .gitignore  README.md  build.gradle  learnings.md  pre-commit
.github/workflows/: lint.yml
aoc-go/: go.mod
aoc-go/2017/09/: day.go
aoc-go/2017/10/: day.go
aoc-go/2017/11/: day.go
aoc-go/2017/12/: day.go
aoc-go/2017/13/: day.go
aoc-go/2017/14/: day.go  learned.md
aoc-go/2017/15/: day.go
aoc-go/2017/16/: day.go
aoc-go/2017/17/: day.go  learned.md
aoc-go/2017/18/: day.go
aoc-go/2017/19/: day.go
aoc-go/2018/13/: day.go
aoc-go/2018/14/: day.go  learned.md
aoc-go/2018/16/: day.go
aoc-go/2018/18/: day.go
aoc-go/2018/19/: day.go
aoc-go/2018/20/: day.go
aoc-go/2018/21/: day.go
aoc-go/2018/22/: day.go
aoc-go/2018/23/: day.go
aoc-go/2018/25/: day.go
aoc-go/2019/20/: day.go
aoc-go/2023/01/: day.go
aoc-go/2023/02/: day.go
aoc-go/2023/03/: day.go
aoc-go/2023/04/: day.go
aoc-go/2023/05/: day.go
aoc-go/2023/06/: day.go
aoc-go/2023/07/: day.go
aoc-go/2023/08/: day.go
aoc-go/2023/09/: day.go
aoc-go/2023/10/: day.go
aoc-go/2023/11/: day.go
aoc-go/2023/12/: day.go
aoc-go/2023/13/: day.go
aoc-go/2023/14/: day.go
aoc-go/2023/15/: day.go
aoc-go/2023/16/: day.go
aoc-kotlin/: build.gradle.kts  settings.gradle
aoc-python/: pyproject.toml
aoc-python/y2017/: day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
aoc-python/y2018/: day_15.py
aoc-python/y2023/: day_24.py  day_25.py
aoc-python/y2024/: day_1.py  day_11.py  day_14.py  day_15.py  day_2.py  day_5.py  day_8.py
(+274 files in other folders)
